--- a/miniPsl/views/master.pug
+++ b/miniPsl/views/master.pug
@@ -1,15 +1,16 @@
 html 
     head
         title my mini psl
-        link(rel="stylesheet", href="/stylesheets/style.css");
+        link(rel="stylesheet", href="/stylesheets/style.css")
     body
+        h1 PAKISTAN SUPPER LEAGUE 
         ul#topMenu 
             li 
                 a(href="/")  Home
             li 
-                a(href="/total teams")  Total Teams
+                a(href="/totalteams")  Total Teams
             li 
-                a(href="/adminPage")  Admin Sign-In  
+                a(href="/AdminPage")  Admin Sign-In  
 
         hr
         block content 
