--- a/miniPsl/public/stylesheets/style.css
+++ b/miniPsl/public/stylesheets/style.css
@@ -3,6 +3,24 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+h1{
+  color:red;
+  text-align: center;
+  background-color: antiquewhite;
+}
+#TopMenu{
+  text-align:center;
+}
+
+#TopMenu >li{
+  display:inline-block;
+  padding-right:3em;
+}
+#TopMenu >li >a{
+  text-decoration: none;
+  font-size:x-large;
+}
+
 a {
   color: #00B7FF;
 }
