--- a/miniPsl/public/stylesheets/style.css
+++ b/miniPsl/public/stylesheets/style.css
@@ -6,15 +6,26 @@ body {
 h1{
   color:red;
   text-align: center;
-  background-color: antiquewhite;
+  font-size: xx-large;
+  font-family:cursive;
+}
+
+h2{
+  color:red;
+  text-align: center;
+  background-color:bisque;
+  font-size: xx-large;
+  font-style: oblique;
 }
 #TopMenu{
   text-align:center;
+  background-color: black;
+  height:4rem;
 }
 
 #TopMenu >li{
   display:inline-block;
-  padding-right:3em;
+  padding:1.5em;
 }
 #TopMenu >li >a{
   text-decoration: none;
@@ -22,5 +33,11 @@ h1{
 }
 
 a {
-  color: #00B7FF;
+  color:white;
+}
+
+
+
+#teamsList>li{
+  font-size: 2rem;
 }
